@@ -17,8 +17,6 @@
 
 - Faster SQUFOF
 
-- prime count bounds are <=, nth_prime bounds are <.  Pick one.
-
-- test file for random_prime
+- nth_prime bounds are < in the code, but <= in the documentation.
 
 - speed up random_prime for large numbers
